# LiveCaptions

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  build_portable.py  docker-compose.yml  download_models.py
backend/: .ruff.toml  Readme.md  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  redis_client.py  requirements.txt  schemas.py
backend/routers/: download.py  system.py  tasks.py  tasks_impl.py  ws.py
backend/services/: alignment.py  asr.py  audio.py  cleaner.py  diarization.py  llm.py
backend/tests/: test_alignment.py  test_segmentation.py
backend/utils/: export.py  file_ops.py  logging.py  text_processing.py
backend/worker/: celery_app.py  tasks.py
docker/: supervisord.conf
docs/: README.md  architecture.md  best_practices.md  glossary.md
frontend/: .prettierignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/contexts/: WebSocketContext.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  NewTask.tsx  TaskDetail.tsx
scripts/: download_models.py  test_asr_clip.py  test_asr_optimized.py  test_comparison_summary.json  test_integration.py  test_result_v2.json  test_result_v3.json
